--- a/222.html
+++ b/222.html
@@ -14,7 +14,7 @@
         }
         header {
             padding: 50px 20px;
-            background: url('IMG_6701.jpg') no-repeat center/cover;
+            background: url('cat.jpg') no-repeat center/cover;
             height: 100vh;
             display: flex;
             flex-direction: column;
